--- a/CRUDAlumnos/appsettings.json
+++ b/CRUDAlumnos/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "conexion": " server=localhost; database=CRUDAlumnos; integrated security=true;",
+    "CRUDAlumnosContextConnection": "Server=(localdb)\\mssqllocaldb;Database=CRUDAlumnos;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "Data_IdentityContextConnection": "Server=(localdb)\\mssqllocaldb;Database=CRUDAlumnos;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
